syntax = "proto3";

option java_multiple_files = true;
option java_package = "central.deliveries.proto";

package central.deliveries;

import "central/common.proto";

message DeliveryRegistered {
  string delivery_id = 1;
  Coordinates origin = 2;
  Coordinates destination = 3;
}